--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Pokedex</h1>
+    <div class="poke-container" id="poke-container">
+      
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
